# openvas-scanner

misc/: ipc_openvas.c  ipc_openvas.h  table_driven_lsc.c  table_driven_lsc.h
nasl/: nasl_init.c  nasl_packet_forgery.c  nasl_scanner_glue.c  nasl_scanner_glue.h
rust/: Cargo.toml  test.sh
rust/examples/: packet_forgery.nasl
rust/examples/sensord/: config.example.toml
rust/examples/tls/: client_certificates.sh
rust/feed/src/verify/: mod.rs
rust/models/src/: credential.rs  parameter.rs  port.rs  result.rs  scan.rs  scan_action.rs  scanner_parameter.rs  status.rs  target.rs  vt.rs
rust/nasl-interpreter/: Cargo.toml
rust/nasl-interpreter/src/: helper.rs  loader.rs
rust/nasl-interpreter/src/built_in_functions/: frame_forgery.rs  hostname.rs  misc.rs  mod.rs  packet_forgery.rs
rust/osp/src/: commands.rs  connection.rs  lib.rs  response.rs
rust/scanner-api/src/: manager.rs  routes.rs  scan_manager.rs
rust/scannerd/: Cargo.toml  README.md
rust/scannerd/src/: feed.rs  main.rs  tls.rs
rust/sensord/: Cargo.toml  README.md
rust/sensord/src/: config.rs  controller.rs  feed.rs  main.rs  request.rs  response.rs  scan.rs  tls.rs
src/: attack.c
